fdo#59886 export fixed date and time fields to docx.

Fixed date and time fields are supported in OOXML by adding the
attribute fldLock="true" to the fldChar element. This applies only
to the first instance of fldChar in a field (i.e. when fldCharType
is "begin").

Change-Id: Ibb84503b942ca20b53fe476e5006d64b2f3112e5
Reviewed-on: https://gerrit.libreoffice.org/13429
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>